  * dh_strip: Sort build-ids to make the Build-Ids header
    reproducible.
  * Dh_Lib.pm: Respect --no-act in autotrigger, thanks to
    Andreas Henriksson and Helmut Grohne for reporting
    the issue.  (Closes: #800919)
  * Fix typos in various manpages.  Thanks to Chris Leick
    for reporting them.
  * dh_clean: Avoid cleaning up debian/.debhelper when
    passed the "-d" flag.

  [ Translations ]
  * Update German translation (Chris Leick)
    (Closes: #802198)

 -- Niels Thykier <niels@thykier.net>  Mon, 05 Oct 2015 08:33:26 +0200

debhelper (9.20151004) unstable; urgency=medium

  [ Niels Thykier ]
  * dh/dh_auto_*: Apply patch from Eduard Sanou to define
    SOURCE_DATE_EPOCH.  (Closes: #791823)
  * cmake.pm: Add better cross-compile support for cmake.
    Heavily based on a patch from Helmut Grohne.
    (Closes: #794396)
  * cmake.pm: Pass -DCMAKE_INSTALL_SYSCONFDIR=/etc and
    -DCMAKE_INSTALL_LOCALSTATEDIR=/var to cmake.  Thanks to
    Felix Geyer, Lisandro Damián Nicanor Pérez Meyer and
    Michael Terry for the assistance plus suggestions.
    (Closes: #719148)
  * dh_installinit: Quote directory name before using it in
    a regex.
  * dh_installinit: Create script snippts for tmpfiles.d
    files even if the package has no sysvinit script or
    explicit debian/<package>.service file.
    (Closes: #795519)
  * dh_makeshlibs: Revert passing -X to ldconfig in compat 10
    after talking with the glibc maintainer.  This is not the
    right place to make this change.
  * d/control: Remove the homepage field.
  * dh: Make dh_strip_nondeterminism optional, so debhelper
    does not need to build-depend on it.
  * dh_gencontrol/dh_builddeb: Temporarily stop building ddebs
    for udebs as dpkg-gencontrol and dpkg-deb does not agree
    the default file extension for these.
  * dh_builddeb: Generate udebs with the correct filename even
    when "-V" is passed to dpkg-gencontrol.  This relies on
    dpkg-deb getting everything but the extension correct