@@ -10,6 +10,7 @@ debhelper (9.20151005) unstable; urgency=medium
     for reporting them.
   * dh_clean: Avoid cleaning up debian/.debhelper when
     passed the "-d" flag.
+  * Dh_Lib.pm: Reject compat levels earlier than 3.
 
   [ Translations ]
   * Update German translation (Chris Leick)
